--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "core-js": "3.6.4",
     "d3": "^5.16.0",
     "hammerjs": "^2.0.0",
+    "highcharts": "^10.0.0",
     "jquery": "^3.6.0",
     "rxjs": "6.5.5",
     "simple-update-in": "^2.2.0",
@@ -61,7 +62,7 @@
     "@types/d3": "^5.7.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.5.5",
+    "@types/jquery": "^3.5.14",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
