--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               {
                 "input": "node_modules/@progress/kendo-theme-material/dist/all.css"
               },
@@ -103,6 +104,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               {
                 "input": "node_modules/@progress/kendo-theme-material/dist/all.css"
               },
