--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "9.1.9",
     "@angular/forms": "9.1.9",
     "@angular/localize": "9.1.9",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "9.1.9",
     "@angular/platform-browser-dynamic": "9.1.9",
     "@angular/router": "9.1.9",
@@ -47,6 +48,7 @@
     "d3": "^5.16.0",
     "hammerjs": "^2.0.0",
     "highcharts": "^10.0.0",
+    "jbox": "^1.3.3",
     "jquery": "^3.6.0",
     "rxjs": "6.5.5",
     "simple-update-in": "^2.2.0",
