--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "highcharts": "^10.0.0",
     "jbox": "^1.3.3",
     "jquery": "^3.6.0",
+    "material-tooltip": "^1.0.1",
     "rxjs": "6.5.5",
     "simple-update-in": "^2.2.0",
     "topojson": "^3.0.2",
